--- a/017_understanding-net-http-package/03_Request/01_ParseForm_Form/index.gohtml
+++ b/017_understanding-net-http-package/03_Request/01_ParseForm_Form/index.gohtml
@@ -6,17 +6,19 @@
 </head>
 <body>
 
-
 {{if .}}
 <main>
     <p><strong>variable names</strong> (identifiers) and <em>values</em>:</p>
-    {{range $key, $value := .}}
-            <p><strong>{{$key}}</strong></p>
-            <ul>{{range $value}}<li><em>{{.}}</em></li>{{end}}</ul>
+    {{range $key,$val := .}}
+        <p><strong>{{$key}}</strong></p>
+            <ul>
+            {{range $val}}
+                <li>{{$val}}</li>
+            {{end}}
+            </ul>
     {{end}}
 </main>
 {{end}}
-
 
 <form action="/?fname=James" method="POST">
         <input type="text" name="fname" placeholder="first name" autofocus autocomplete="off">
